# cookiecutter-data-science

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: Makefile  README.md  pyproject.toml
