[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = '{{ cookiecutter.description }}'
authors = ['{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>']
license = '{% if cookiecutter.open_source_license == 'MIT' %}MIT{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3{% endif %}'

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
python-dotenv = "^0.10.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"

[tool.black]
max-line-length = 88

[tool.isort]
line_length = 88
include_trailing_comma = true
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
